@@ -1,3 +1,15 @@
+Fri Oct  9 02:39:47 2009  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>
+
+	* ext/curses/curses.c: Many functions of module Curses could cause a
+	  crash if the ncurses library was not properly initialized.
+	  Fix pointed out by Alexander Beisig [ruby-core:22592]
+	  Functions fixed: attroff, attron, attrset, bkgd, bkgdset,
+	  can_change_color, close_screen, closed, color_content, curs_set,
+	  def_prog_mode, delch, deleteln, getmouse, getstr, has_colors,
+	  init_color, init_pair, insertln, keyname, mouseinterval, mousemask,
+	  pair_content, pair_number, reset_prog_mode, resizeterm, scrl,
+	  setscrreg, standend, standout, start_color, timeout, ungetmouse
+
 Fri Oct  9 00:34:20 2009  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>
 
 	* lib/net/telnet.rb (cmd): Pass FailEOF options: patch by Brian
